# sequence_view

./: CMakeLists.txt  Coverage.cmake  Packages.cmake  README.md  common.cc  mask.cc  range.cc  stl.cc
.github/workflows/: cmake.yml
include/sequence_view/: base-iterator.hpp  common.hpp  mask.hpp  range.hpp  view.hpp
tests/: base.cc  mask.cc  view.cc
